--- a/gearshift/src/main/res/values-de/strings.xml
+++ b/gearshift/src/main/res/values-de/strings.xml
@@ -162,7 +162,7 @@
     <string name="remove_with_data">Lösche die Daten</string>
 
     <string name="torrent_have_format">%1$s von %2$s (%3$s%%)</string>
-    <string name="torrent_size_format">%1$s (%2$s Teile @ %3$s)</string>
+    <string name="torrent_size_format">%1$s (%2$d Teile @ %3$s)</string>
     <string name="torrent_added_format">vor %1$s</string>
 
     <string name="none">Keine</string>
