--- a/gearshift/src/main/res/values-es/strings.xml
+++ b/gearshift/src/main/res/values-es/strings.xml
@@ -149,7 +149,7 @@
     <string name="remove_current_confirmation">¿Seguro que desea eliminar \'%s\'?</string>
 
     <string name="torrent_have_format">%1$s of %2$s (%3$s%%)</string>
-    <string name="torrent_size_format">%1$s (%2$s trozos @ %3$s)</string>
+    <string name="torrent_size_format">%1$s (%2$d trozos @ %3$s)</string>
     <string name="torrent_added_format">Hace %1$s</string>
 
     <string name="none">Ninguno</string>
