--- a/gearshift/src/main/res/values-fr/strings.xml
+++ b/gearshift/src/main/res/values-fr/strings.xml
@@ -165,7 +165,7 @@
     <string name="remove_with_data">Supprimer les données</string>
 
     <string name="torrent_have_format">%1$s de %2$s (%3$s%%)</string>
-    <string name="torrent_size_format">%1$s (%2$s éléments @ %3$s)</string>
+    <string name="torrent_size_format">%1$s (%2$d éléments @ %3$s)</string>
     <string name="torrent_added_format">Il y a %1$s</string>
 
     <string name="none">Aucun</string>
