--- a/gearshift/src/main/res/values-ru/strings.xml
+++ b/gearshift/src/main/res/values-ru/strings.xml
@@ -165,7 +165,7 @@
     <string name="remove_with_data">Удалить с данными</string>
 
     <string name="torrent_have_format">%1$s из %2$s (%3$s%%)</string>
-    <string name="torrent_size_format">%1$s (%2$s частей @ %3$s)</string>
+    <string name="torrent_size_format">%1$s (%2$d частей @ %3$s)</string>
     <string name="torrent_added_format">%1$s назад</string>
 
     <string name="none">None</string>
