--- a/gearshift/src/main/res/values/strings.xml
+++ b/gearshift/src/main/res/values/strings.xml
@@ -165,7 +165,7 @@
     <string name="remove_with_data">Delete the data</string>
 
     <string name="torrent_have_format">%1$s of %2$s (%3$s%%)</string>
-    <string name="torrent_size_format">%1$s (%2$s pieces @ %3$s)</string>
+    <string name="torrent_size_format">%1$s (%2$d pieces @ %3$s)</string>
     <string name="torrent_added_format">%1$s ago</string>
 
     <string name="none">None</string>
