Show speed / free space in the status bar

--- a/gearshift/src/main/res/values/strings.xml
+++ b/gearshift/src/main/res/values/strings.xml
@@ -115,5 +115,7 @@
 	<string name="torrent_list_sort_descending">Descending</string>
 	<string name="torrent_list_sorting_header">Sorting</string>
 
-	<string name="status_bar_format"><![CDATA[↓ %1$s%2$s, ↑ %3$s%4$s, ⊙ %5$s]]></string>
+	<string name="status_bar_download"><![CDATA[↓ %1$s%2$s]]></string>
+	<string name="status_bar_upload"><![CDATA[↑ %1$s%2$s]]></string>
+	<string name="status_bar_free_space"><![CDATA[⊙ %1$s]]></string>
 </resources>
