Show a snackbar if an error occurs
Make the api.torrents call get it's own session value, as it somehow
causes problems when retrying twice

--- a/gearshift/src/main/res/values/strings.xml
+++ b/gearshift/src/main/res/values/strings.xml
@@ -123,4 +123,8 @@
 	<string name="action_pause">Pause</string>
 	<string name="action_remove">Remove</string>
 	<string name="action_search">Search</string>
+	<string name="error_timeout">Connection timeout</string>
+	<string name="error_generic">Error contacting the server</string>
+	<string name="error_auth">Access denied</string>
+	<string name="error_http">HTTP error: %d</string>
 </resources>
