--- a/gearshift/src/main/res/values/strings.xml
+++ b/gearshift/src/main/res/values/strings.xml
@@ -127,4 +127,6 @@
 	<string name="error_generic">Error contacting the server</string>
 	<string name="error_auth">Access denied</string>
 	<string name="error_http">HTTP error: %d</string>
+
+	<string name="filter_header_status">Status</string>
 </resources>
