--- a/gearshift/src/main/res/values/strings.xml
+++ b/gearshift/src/main/res/values/strings.xml
@@ -46,10 +46,6 @@
     <string name="first_time_profile_title">Hi there</string>
     <string name="first_time_profile_subtitle">Please fill out all relevant information for access to your torrent server. You can adjust the profile later in the settings.</string>
     <string name="new_profile">New profile</string>
-    <string name="action_test">Test</string>
-
-    <string name="profile_check_success">Success</string>
-    <string name="profile_check_failure">Failure</string>
 
     <string-array name="pref_con_retries_entries">
         <item>Once</item>
@@ -147,4 +143,7 @@
 	<string name="remove_positive">Remove</string>
 	<string name="misc">Miscellaneous</string>
 	<string name="profile_color">Profile color</string>
+	<string name="action_save">Save</string>
+	<string name="profile_check_failure_auth">Invalid authentication</string>
+	<string name="profile_check_failure_generic">Cannot connect to server</string>
 </resources>
